--- a/style.css
+++ b/style.css
@@ -1,49 +1,55 @@
-body{
-        justify-content: center;
-        align-items: center; 
-        width: 100%;
-        height: 100vh;
-        font-family: 'poppins','sans-serif';
-        background: linear-gradient(-45deg, black, silver, white) ;   
-    }
+body {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    font-family: 'poppins', 'sans-serif';
+    background: linear-gradient(-45deg, black, silver, white);
+}
 
-.navlink a{
+.navlink a {
     text-decoration: none;
-    color:  rgb(15, 20, 25);
+    color: rgb(15, 20, 25);
     margin-right: 150px;
 }
-.navlink a:hover{
-    text-decoration: underline;  
+
+.navlink a:hover {
+    text-decoration: underline;
     background-color: brown;
     border-radius: 5px;
+
 }
-.menu{
+
+.menu {
     padding-top: 20px;
 }
-.imagem01{
+
+.imagem01 {
     padding-top: 40px;
-    display:inline-block;vertical-align:top;
+    padding-left: 25px;
+    display: inline-block;
+    vertical-align: top;
 }
-.text_{
-    display:inline-block;
+
+.text_ {
+    display: inline-block;
     padding-top: 60px;
     padding-left: 50px;
 }
-.texto1{
+
+.texto1 {
     padding-top: 60px;
 }
-.forms{
-    opacity : 0.3;
+
+.forms {
+    opacity: 0.3;
 }
 
-h3{
+h3 {
     padding-top: 100px;
+
 }
 
-.botao{
+.botao {
     margin-top: 10px;
-}
-
-.imagemqxd{
-    justify-content: left;
 }
