--- a/style.css
+++ b/style.css
@@ -1,103 +1,65 @@
-<<<<<<< HEAD
 html, body{
-        justify-content: center;
-        align-items: center; 
-        width: 100%;
-        height: 100vh;
-        font-family: 'poppins','sans-serif';
-        background: linear-gradient(-45deg, black, silver, white) ; 
-        min-height: 100vh;  
-    }
-
-.navlink a{
-=======
-body {
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     width: 100%;
     height: 100vh;
-    font-family: 'poppins', 'sans-serif';
-    background: linear-gradient(-45deg, black, silver, white);
+    font-family: 'poppins','sans-serif';
+    background: linear-gradient(-45deg, black, silver, white) ; 
+    min-height: 100vh;  
 }
 
-.navlink a {
->>>>>>> 07f41a0a71fdd2b85c0dc0a18103ad04b7b465f7
-    text-decoration: none;
-    color: rgb(15, 20, 25);
-    margin-right: 150px;
+.navlink a{
+text-decoration: none;
+color:  rgb(15, 20, 25);
+margin-right: 150px;
 }
-<<<<<<< HEAD
 a{
-    text-decoration: none;
+text-decoration: none;
 }
 .navlink a:hover{
-    text-decoration: underline;  
-=======
-
-.navlink a:hover {
-    text-decoration: underline;
->>>>>>> 07f41a0a71fdd2b85c0dc0a18103ad04b7b465f7
-    background-color: brown;
-    border-radius: 5px;
-
+text-decoration: underline;  
+background-color: brown;
+border-radius: 5px;
 }
-<<<<<<< HEAD
 /* .menu{
-    padding-top: 20px;
+padding-top: 20px;
 } */
 .imagem01{
-=======
-
-.menu {
-    padding-top: 20px;
+padding-top: 40px;
+display:inline-block;vertical-align:top;
+}
+.text_{
+display:inline-block;
+padding-top: 60px;
+padding-left: 50px;
+}
+.texto1{
+padding-top: 60px;
+}
+.forms{
+opacity : 0.3;
 }
 
-.imagem01 {
->>>>>>> 07f41a0a71fdd2b85c0dc0a18103ad04b7b465f7
-    padding-top: 40px;
-    padding-left: 25px;
-    display: inline-block;
-    vertical-align: top;
+h3{
+padding-top: 100px;
 }
 
-.text_ {
-    display: inline-block;
-    padding-top: 60px;
-    padding-left: 50px;
+.botao{
+margin-top: 10px;
 }
-
-.texto1 {
-    padding-top: 60px;
-}
-
-.forms {
-    opacity: 0.3;
-}
-
-h3 {
-    padding-top: 100px;
-
-}
-
-.botao {
-    margin-top: 10px;
-}
-<<<<<<< HEAD
 
 .comod button{
-    justify-content: end;
+justify-content: end;
 }
 
 .img-card {
-    height: 250px;
-    width:250px;
+height: 250px;
+width:250px;
 }
 .btnmsg{
-    border-radius: 25px;
+border-radius: 25px;
 }
 
 .card{
-    max-width:300px;
+max-width:300px;
 }
-=======
->>>>>>> 07f41a0a71fdd2b85c0dc0a18103ad04b7b465f7
