--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-html, body{
+body{
     justify-content: center;
     align-items: center; 
-    width: 100%;
-    height: 100vh;
     font-family: 'poppins','sans-serif';
     background: linear-gradient(-45deg, black, silver, white) ; 
     min-height: 100vh;  
