add pagina de saida e complementando pagina de formulario

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -64,3 +64,18 @@ max-width:300px;
 .botaoanuncio{
     padding-left: 70px;
 }
+.chk input {
+    display: none;
+}
+
+.chk span {
+    width: 12px;
+    height: 12px;
+    display: block;
+    background-color: #fff;
+    border: 1px solid #DDD;
+}
+
+.chk input:checked + span {
+    background-color: #c03;
+}
